--- a/MediaExtractor/Properties/Resources.en.resx
+++ b/MediaExtractor/Properties/Resources.en.resx
@@ -420,4 +420,7 @@
   <data name="DialogInvalidExtensions" xml:space="preserve">
     <value>An error occurred during the retrieval of the file extensions for the previews. The default values are restored</value>
   </data>
+  <data name="StatusReady" xml:space="preserve">
+    <value>Ready</value>
+  </data>
 </root>
