Added embedded file size and decoding of wdp files

--- a/MediaExtractor/Properties/Resources.de-DE.resx
+++ b/MediaExtractor/Properties/Resources.de-DE.resx
@@ -423,4 +423,7 @@
   <data name="StatusReady" xml:space="preserve">
     <value>Bereit</value>
   </data>
+  <data name="ListViewColumnSize" xml:space="preserve">
+    <value>Größe</value>
+  </data>
 </root>
